# bet

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSING.md  README.md  betfe  bootstrap-plan.md  clippy.toml  deny.toml  graph-allowlist.toml  language-spec.md  plan-amendment-01.md  plan-amendment-02.md  plan-amendment-03.md  rust-toolchain.toml  rustfmt.toml  v1-launch.md
.cargo/: config.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-llvm.yml  ci.yml  doom-parity.yml  miri.yml  release-npm.yml  selfhost.yml
crates/backend/: Cargo.toml
crates/backend/src/: codegen.rs  lib.rs
crates/backend/tests/: object_llvm.rs
crates/driver/: Cargo.toml
crates/driver/benches/: zero_cost.rs
crates/driver/src/: link.rs  main.rs
crates/driver/tests/: e2e_llvm.rs  stdin_read_line.rs  zero_cost.rs
crates/fmt/: Cargo.toml
crates/fmt/src/: lib.rs
crates/fmt/tests/: corpus_roundtrip.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: ast.rs  dump.rs  lexer.rs  lib.rs  loader.rs  lower.rs  parser.rs  resolve.rs
crates/frontend/tests/: gg_lower.rs  lexer_keywords_grammar.rs  lower_mir.rs  parse_corpus.rs  soa_bans.rs  swizzle_bans.rs
crates/frontend/tests/snapshots/: lower_mir__lower_arith.snap  lower_mir__lower_bit_ops.snap  lower_mir__lower_casts.snap  lower_mir__lower_compound_assign.snap  lower_mir__lower_cop_trust.snap  lower_mir__lower_evict.snap  lower_mir__lower_extern_call.snap  lower_mir__lower_field_mutation.snap  lower_mir__lower_first_class.snap  lower_mir__lower_fixed_point.snap  lower_mir__lower_holla.snap  lower_mir__lower_if_chain.snap  lower_mir__lower_local_crib.snap  lower_mir__lower_loop_control.snap  lower_mir__lower_multi_return.snap  lower_mir__lower_short_circuit.snap  lower_mir__lower_spill_bool.snap  lower_mir__lower_spill_f32.snap  lower_mir__lower_spill_f64.snap  lower_mir__lower_spill_format.snap  lower_mir__lower_spill_format_escapes.snap  lower_mir__lower_spill_ghosted.snap  lower_mir__lower_spill_int64.snap  lower_mir__lower_spill_literal.snap  lower_mir__lower_spill_signed.snap  lower_mir__lower_spill_unsigned.snap  lower_mir__lower_struct.snap  lower_mir__lower_sum_in_field.snap  lower_mir__lower_unary.snap  lower_mir__lower_vibe.snap  lower_mir__lower_vibe_naw.snap  lower_mir__lower_while.snap  lower_mir__lower_wrapping.snap  parse_corpus__snap_arithmetic.snap  parse_corpus__snap_bam_angles.snap  parse_corpus__snap_bit_ops.snap  parse_corpus__snap_bounce.snap  parse_corpus__snap_comments.snap  parse_corpus__snap_compound.snap  parse_corpus__snap_drip_basics.snap  (+16 more)
crates/gg-backend/: Cargo.toml
crates/gg-backend/src/: lib.rs
crates/interp/: Cargo.toml
crates/interp/src/: error.rs  interp.rs  lib.rs  value.rs
crates/interp/tests/: corpus_semantics.rs  modules_e2e.rs
crates/lsp/: Cargo.toml
crates/midir/: Cargo.toml
crates/midir/src/: build.rs  ir.rs  lib.rs  text.rs  validate.rs
crates/midir/tests/: midir.rs
crates/playground/: Cargo.toml
crates/playground/src/: lib.rs
crates/rt-abi/: Cargo.toml
crates/rt-stub/: Cargo.toml
crates/rt-stub/src/: lib.rs
crates/rt-stub/tests/: abi.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/tests/: abi.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bake_fb.rs  doom.rs  doom_coverage.rs  doom_gen.rs  doom_golden.rs  doom_oracle.rs  doom_verify.rs  llvm.rs  main.rs  run_port.rs
docker/: Dockerfile  README.md  compose.yaml  verify.sh
npm/: README.md  stage.mjs
npm/betlang/: README.md  package.json
ports/doom/: CONTRACTS.md  DESYNC-LOG.md  LICENSE  README.md  RENDER-LOG.md  doom.bet  p-sigs.md  run.sh
ports/fireworks/: README.md  fireworks.bet  run.sh
ports/frozen-bubble/: .gitignore  README.md  frozen-bubble.bet
ports/gg-demo/: README.md  gg-demo.bet
ports/oregon-trail/: README.md  combat.bet  oregon.bet  perils.bet  setup.bet  state.bet  turn.bet  util.bet
ports/pong/: README.md  consts.bet  dims.bet  game.bet  pong.bet
scripts/: betself  timelog-hook.sh  timelog.sh
selfhost/: README.md  betfe.bet
spec/: grammar.ebnf  midir.md  runtime-abi.md  semantics.md  syntax-decisions.md
std/: README.md
std/bytes/: README.md
std/fs/: README.md
std/gg/: README.md
std/math/: README.md
std/mem/: README.md
std/net/: README.md
std/spill/: README.md
std/squadops/: README.md
std/stash/: README.md
std/str/: README.md
std/time/: README.md
std/vec/: README.md
tests/bench/: README.md  aos_kernel.bet  soa_kernel.bet
tests/conformance/: README.md
tests/corpus/: MANIFEST.toml  README.md
tests/mir/: README.md  arith.mir  array.mir  casts.mir  control.mir  crib.mir  crib_global.mir  div_guard.mir  float.mir  ftoi_sat.mir  hello.mir  holla.mir  indirect.mir  oob_index.mir  ops.mir  overflow_trap.mir  print.mir  shift_mask.mir  simd.mir  slice.mir  sum.mir  tag16.mir  thinker.mir  tuple.mir  vibe.mir
timelog/: README.md  tasks.toml
timelog/events/: 20260702T210647Z__step0-skeleton__e219c282-265a-4385-b953-6952cd8223e5.jsonl  20260702T212325Z__step0-skeleton__0c60250b-c217-4032-94fd-2bc75e83e62b.jsonl  20260702T213616Z__step0-skeleton__dab4760c-6b9b-4564-97e4-8abc2e0c1eb3.jsonl  20260702T214746Z__step0-skeleton__71aa2fd2-342d-4e7a-9226-3117c2a1b84c.jsonl  20260702T220032Z__grammar-corpus__9b8d3f04-d63f-457b-b3a6-b635e9b726bf.jsonl  20260703T000516Z__grammar-corpus__ff25c2fb-004d-43cb-9d1b-5582221053e4.jsonl  20260703T001737Z__midir__0d6e2efd-c936-41b5-95a3-3a5fba954a2f.jsonl  20260703T004316Z__midir__b33fe213-a6a1-48b8-8c49-c444a8ea8d32.jsonl  20260703T010845Z__rt-abi__fa01db5e-ba79-44fa-a9f9-a006189a149d.jsonl  20260703T015551Z__semantics__720ccd2d-ead5-41e3-b98a-a877b5d3d3ca.jsonl  20260703T023639Z__step1-gaps__91bb2859-3862-4799-869b-9a2be659ce1e.jsonl  20260703T031901Z__tracer-bullet__0ce5c7d8-e809-48a5-b40b-5805957a3686.jsonl  20260703T032514Z__tracer-bullet__04ca9d52-0ce5-4567-b527-885caedd942c.jsonl  20260703T113153Z__step3-kickoff__340fcc21-54bf-4904-8caf-4bbd74e6989e.jsonl  20260703T161625Z__stash__bec8e3f7-6004-45a5-ab19-09835f8e1982.jsonl  (+195 more)
(+263 files in other folders)
