# Virtual workspace root for `bet` (the language implementation).
# No [package] here — members live under crates/. std/, tests/, selfhost/, ports/
# are NOT crates (they hold bet source, data, and future harnesses); they are
# excluded defensively so cargo never tries to auto-discover them.
[workspace]
resolver = "3"
members  = ["crates/*"]
exclude  = ["std", "tests", "selfhost", "ports"]

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# --- live now (used by xtask) ---
anyhow         = "1"
cargo_metadata = "0.19"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"

# --- live now (browser playground shim, crates/playground) ---
# Resolves to the 0.2.126 already in Cargo.lock (pulled transitively by cpal/minifb/instant/
# plotters), so adopting it as a direct dep adds no new crate versions.
wasm-bindgen = "0.2"

# --- live now (compiler crates) ---
# inkwell is optional and OFF by default: backend gates it behind its `llvm`
# feature, so the default workspace build needs no LLVM install.
inkwell   = { version = "0.5", default-features = false, features = ["llvm18-0"] }
thiserror = "2"     # backend, midir
logos     = "0.14"  # frontend (lexer; the parser is hand-written recursive descent)
criterion = "0.5"   # driver (dev-dep, bench harness)
insta     = "1"     # frontend (dev-dep, snapshot tests)

# Lint policy inherited by every crate via `[lints] workspace = true`.
# Levels live here; CI runs clippy with `-D warnings`, so any of these is a hard error there.
[workspace.lints.rust]
# NOTE: unsafe_code is deliberately NOT forbidden — rt-abi/rt-stub/runtime/backend
# need `unsafe` (extern "C", FFI, raw slabs) in Step 1+. Kept at warn.
unsafe_code = "warn"
# `unused_crate_dependencies` is intentionally OFF in Step 0: the stub crates wire
# their real dependency EDGES (so graph-check is meaningful) but the empty lib.rs
# files don't reference them yet, which would trip this lint under `-D warnings`.
# Re-enable in Step 1 once crates actually use their deps.
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Size-optimized profile for the browser playground wasm (`cargo xtask wasm` builds
# `-p playground --profile wasm-release`). DEDICATED on purpose: it is inert unless explicitly
# selected, so the undefined `[profile.release]` that native `cargo build --release` / the
# release-npm.yml `bet` binary rely on stays at cargo's defaults. `panic = "abort"` applies only
# here — `run_bet` still returns `Result` for handled compile/runtime errors.
[profile.wasm-release]
inherits      = "release"
opt-level     = "z"      # optimize for size
lto           = true     # cross-crate inlining + dead-code elimination (drops the unused frontend::lower path)
codegen-units = 1        # maximal optimization
panic         = "abort"  # remove unwinding / landing-pad machinery (large wasm win)
strip         = true     # drop symbols + debug info
