# Virtual workspace root for `bet` (the language implementation).
# No [package] here — members live under crates/. std/, tests/, selfhost/, ports/
# are NOT crates (they hold bet source, data, and future harnesses); they are
# excluded defensively so cargo never tries to auto-discover them.
[workspace]
resolver = "3"
members  = ["crates/*"]
exclude  = ["std", "tests", "selfhost", "ports"]

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "Apache-2.0"
publish = false
# NOTE: no `rust-version` here on purpose — see clippy.toml. Inheriting it would
# require `rust-version.workspace = true` in all 13 member manifests; adding it
# here alone is inert and would only create a second copy to drift.

[workspace.dependencies]
# --- live now (used by xtask) ---
anyhow         = "1"
cargo_metadata = "0.19"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"

# --- live now (browser playground shim, crates/playground) ---
# Resolves to the 0.2.126 already in Cargo.lock (pulled transitively by cpal/minifb/instant/
# plotters), so adopting it as a direct dep adds no new crate versions.
wasm-bindgen = "0.2"

# --- live now (compiler crates) ---
# inkwell is optional and OFF by default: backend gates it behind its `llvm`
# feature, so the default workspace build needs no LLVM install.
inkwell   = { version = "0.5", default-features = false, features = ["llvm18-0"] }
thiserror = "2"     # backend, midir
logos     = "0.14"  # frontend (lexer; the parser is hand-written recursive descent)
criterion = "0.5"   # driver (dev-dep, bench harness)
insta     = "1"     # frontend (dev-dep, snapshot tests)

# Lint policy inherited by every crate via `[lints] workspace = true`.
# Levels live here; CI runs clippy with `-D warnings`, so any of these is a hard error there.
[workspace.lints.rust]
# NOTE: unsafe_code is deliberately NOT forbidden — rt-abi/rt-stub/runtime/backend
# need `unsafe` (extern "C", FFI, raw slabs) in Step 1+. Kept at warn.
unsafe_code = "warn"
# Catches per-crate dependency rot: a dep declared in a crate's [dependencies]
# that its source never references. This does NOT police the
# [workspace.dependencies] catalog above — an entry no member references is
# invisible to it, so prune those by hand.
#
# `backend`'s hardcoded-`rt_abi::Tag` blocker is now FIXED (issue #103): codegen.rs
# reads `rt_abi::Tag::NULL` for the null-tag sentinel and pins `tag_ty()` to the
# real `rt_abi::Tag` layout with a compile-time guard, and lib.rs holds the edge
# open for the default (LLVM-free) build with `use rt_abi as _;` (as
# crates/lsp/src/lib.rs does for its own reserved `frontend` edge). `backend` is
# lint-clean now — it is NOT what keeps this commented.
#
# The lint stays OFF because enabling it workspace-wide under `--all-targets`
# (what CI runs) is NOT a one-crate change: the lint is per-compilation-unit, so
# it also fires on ~20 test/bench/bin targets that legitimately don't reference
# every dep of their package — dev-deps used by only some tests (`insta`,
# `criterion`) and normal deps used by a lib but not a sibling integration test
# (`logos`, `midir`, `rt_abi`, `thiserror`, `frontend`, `interp`, ...) across
# frontend/driver/interp/midir/rt-stub/runtime. Turning it on cleanly first needs
# `use X as _;` shims in all of those targets — a separate cross-cutting cleanup.
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Size-optimized profile for the browser playground wasm (`cargo xtask wasm` builds
# `-p playground --profile wasm-release`). DEDICATED on purpose: it is inert unless explicitly
# selected, so the undefined `[profile.release]` that native `cargo build --release` / the
# release-npm.yml `bet` binary rely on stays at cargo's defaults. `panic = "abort"` applies only
# here — `run_bet` still returns `Result` for handled compile/runtime errors.
[profile.wasm-release]
inherits      = "release"
opt-level     = "z"      # optimize for size
lto           = true     # cross-crate inlining + dead-code elimination (drops the unused frontend::lower path)
codegen-units = 1        # maximal optimization
panic         = "abort"  # remove unwinding / landing-pad machinery (large wasm win)
strip         = true     # drop symbols + debug info
