[package]
name = "driver"
description = "The `bet` CLI users invoke: compile / run / fmt / test"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

# The user-facing binary is named `bet` (the language name), not `driver`.
[[bin]]
name = "bet"
path = "src/main.rs"

[dependencies]
frontend = { path = "../frontend" }
backend  = { path = "../backend" }
interp   = { path = "../interp" }
fmt      = { path = "../fmt" }
# NB: the driver does *not* depend on `rt-stub` or `runtime`. Both export the same
# `#[no_mangle] bet_*` runtime symbols, so linking either (let alone both) as an rlib into the
# `bet` binary collides — a hard duplicate-symbol error on `rust-lld`. The driver only needs
# their *archive names* (string literals in src/link.rs); the staticlibs are built as their own
# workspace members and linked into the *compiled program* by name at `bet build` time.

[features]
default = []
# Forward codegen to the backend. The default build stays LLVM-free; `bet build` without this
# feature reports a clean runtime error instead of failing to compile.
llvm = ["backend/llvm"]

[lints]
workspace = true
