[package]
name = "frontend"
description = "bet frontend LIBRARY: lexer -> parser -> AST -> typecheck -> midir (reused by tooling)"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
midir = { path = "../midir" }
logos = { workspace = true }

[lints]
workspace = true
