[package]
name = "frontend"
description = "bet frontend LIBRARY: lexer -> parser -> AST -> typecheck -> midir (reused by tooling)"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
midir = { path = "../midir" }
logos = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
# The frontend->midir edge already exists (see graph-allowlist.toml); tests reach for the
# `.mir` printer/validator directly to snapshot and check lowered modules.
midir = { path = "../midir" }

[lints]
workspace = true
