[package]
name = "interp"
description = "bet tree-walking interpreter over the AST; differential-test partner + future REPL"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
frontend = { path = "../frontend" }
rt-abi   = { path = "../rt-abi" }

[lints]
workspace = true
