[package]
name = "runtime"
description = "bet real runtime: cribs, generations, scratch arenas, allocator context, slide scheduler, per-OS layer"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

# Built both as a Rust `rlib` (so the driver can depend on it normally and read its link
# name) and as a `staticlib` (so `cargo build` emits `libruntime.a`, the drop-in replacement
# for `librt_stub.a` that the driver links compiled programs against). Mirrors `rt-stub`'s
# crate-type setup so swapping stub -> real runtime is a pure link-line change — the ABI
# signatures are identical.
[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
rt-abi = { path = "../rt-abi" }
# The native `gg` platform layer. Depended on unconditionally, but headless (zero heavy deps)
# unless `gg-desktop` is on — so the default `libruntime.a` stays a pure headless runtime.
gg-backend = { path = "../gg-backend" }

[features]
# Turn the four `bet_gg_*` entry points into a real window/audio/input backend (via
# gg-backend's `desktop` feature). OFF by default: `cargo build` links no minifb/cpal.
gg-desktop = ["gg-backend/desktop"]

[lints]
workspace = true
