[package]
name = "xtask"
description = "Repo automation for bet: graph-check, timelog report/eta, setup-llvm, (corpus/dist stubs)"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow         = { workspace = true }
cargo_metadata = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }

[lints]
workspace = true
